--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ BARAMUNDI_PASSWORD=
 
 BACKUP_MAIL_ADDRESS=
 SNMP_ROUTERS=
-SNMP_REPLACE_DOMAIN=
+DNS_CUT_DOMAIN=
 
 APP_ENCRYPTION=
 APP_COMPANY=""
