--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "danielme85/laravel-log-to-db": "^3.0",
         "directorytree/ldaprecord-laravel": "^2.7",
         "doctrine/dbal": "^3.5",
         "guzzlehttp/guzzle": "^7.5",
