--- a/.env.example
+++ b/.env.example
@@ -1,35 +1,37 @@
 APP_NAME=cesma
 APP_ENV=local
-APP_KEY=
+APP_KEY=CREATE_KEY
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://dev.cesma.doepke.local
+
+DEBUGBAR_ENABLED=false
 
 BARAMUNDI_URL=
 BARAMUNDI_USERNAME=
 BARAMUNDI_PASSWORD=
 
-BACKUP_MAIL_ADDRESS=
-SNMP_ROUTERS=
-DNS_CUT_DOMAIN=
+BACKUP_MAIL_ADDRESS=backup@company.com
+DNS_CUT_DOMAIN=true
 
-APP_ENCRYPTION=
-APP_COMPANY=""
-APP_VERSION=1.4.0
+APP_ENCRYPTION=CREATE_KEY
+APP_COMPANY="Your Company"
+APP_VERSION=3.1.0
 SSH_USERNAME=admin
 SSH_PRIVATEKEY=true
 API_USERNAME=admin
 API_HTTPS=true
-LDAP_LOGGING=true
+
+LDAP_LOGGING=false
 LDAP_CONNECTION=default
-LDAP_HOST=
-LDAP_USERNAME=""
+LDAP_HOST=domaincontroller.company.com
+LDAP_USERNAME="CN=ro_cesma,CN=Users,DC=company,DC=com"
 LDAP_PASSWORD=
 LDAP_PORT=636
-LDAP_BASE_DN=""
-LDAP_TIMEOUT=5
+LDAP_BASE_DN="dc=company,dc=com"
+LDAP_TIMEOUT=15
 LDAP_SSL=true
 LDAP_TLS=false
-LDAP_ADMIN_GROUP=""
+LDAP_ADMIN_GROUP="CN=IT,OU=Groups,DC=company,DC=com"
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -38,15 +40,15 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=
+DB_DATABASE=cesma_database
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=cesma
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=database
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
@@ -56,12 +58,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mail.doepke.de
-MAIL_PORT=25
-MAIL_USERNAME=mailer
-MAIL_PASSWORD=AgVdN5PX^gZtn6GY2%NKVCo6^J
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="mailer@doepke.de"
+MAIL_HOST=
+MAIL_PORT=587
+MAIL_USERNAME="mailer"
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -76,4 +78,3 @@ PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
