Packaging and .env example

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=cesma
-APP_ENV=local
+APP_ENV=production
 APP_KEY=CREATE_KEY
-APP_DEBUG=true
-APP_URL=https://dev.cesma.doepke.local
+APP_DEBUG=false
+APP_URL=https://cesma.company.com
 
 DEBUGBAR_ENABLED=false
 
@@ -13,7 +13,6 @@ BARAMUNDI_PASSWORD=
 BACKUP_MAIL_ADDRESS=backup@company.com
 DNS_CUT_DOMAIN=true
 
-APP_ENCRYPTION=CREATE_KEY
 APP_COMPANY="Your Company"
 APP_VERSION=3.1.0
 SSH_USERNAME=admin
