--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "file-saver": "^2.0.5",
         "jquery": "^3.7.0",
         "multiselect": "^0.9.12",
         "notifyjs-browser": "^0.4.2"
