Updated .env example, fixed AD login

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,33 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+API_USERNAME=admin
+API_HTTPS=true
+SSH_USERNAME=admin
+SSH_PRIVATE_KEY=true
+
+LDAP_LOGGING=true
+LDAP_CONNECTION=default
+LDAP_HOST=127.0.0.1
+LDAP_USERNAME="cn=user,dc=local,dc=com"
+LDAP_PASSWORD=secret
+LDAP_PORT=389
+LDAP_BASE_DN="dc=local,dc=com"
+LDAP_TIMEOUT=5
+LDAP_SSL=false
+LDAP_TLS=false
+LDAP_ADMIN_GROUP="cn=admins,dc=local,dc=com"
+
+BACKUP_MAIL_ADDRESS=someone@local.com
+MAIL_MAILER=smtp
+MAIL_HOST=mailpit
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_NAME="${APP_NAME}"
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
@@ -28,14 +55,6 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
